crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__with__unclosed_ambiguous_lpar.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/with/unclosed_ambiguous_lpar.py
---
## AST

```
Module(
    ModModule {
        node_index: 0,
        range: 0..14,
        body: [
            With(
                StmtWith {
                    node_index: 0,
                    range: 0..14,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 5..6,
                            node_index: 0,
                            context_expr: Name(
                                ExprName {
                                    node_index: 0,
                                    range: 6..6,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: 0,
                                range: 9..14,
                                value: BinOp(
                                    ExprBinOp {
                                        node_index: 0,
                                        range: 9..14,
                                        left: Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 9..10,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 13..14,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | with (:
  |       ^ Syntax Error: Expected an expression
2 |
3 | x + y
  |


  |
1 | with (:
2 |
3 | x + y
  |      ^ Syntax Error: unexpected EOF while parsing
  |
